# gapy-gaze_analysis_python

./: .gitignore  .gitmodules  README.md  gapy.py  pyproject.toml  setup.py
example/: .~lock.sample2.csv#  example.py  output.pstats  sample.csv
gazepy/: __init__.py  gazepy.py
scripts/: README.md  gaze_analysis_3d.py
scripts/samples/: sample.csv
